fix layout bugs during matrix initialization

--- a/app/components/matrix/matrix-view.scss
+++ b/app/components/matrix/matrix-view.scss
@@ -31,11 +31,6 @@
     position: absolute;
     left: 43px;
   }
-
-  #trench-selector-placeholder {
-    height: 41px;
-    z-index: 1001;
-  }
 }
 
 #matrix-container {
